--- a/styles.css
+++ b/styles.css
@@ -14,4 +14,38 @@
 body{
   font-family: "Inter";
   font-size: 14px;
+  background-color: var(--Grey-900);
+  color: var(--White);
+}
+
+main{
+  background-color: var(--Grey-800);
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  margin: 40px auto;
+  border-radius: 12px;
+}
+
+.hero{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & img{
+    margin-top: 16px;
+    width: 160px;
+    border-radius: 50%;  
+  }
+
+  & h1{
+    margin-bottom: 8px;
+  }
+
+  & span{
+    color: var(--Green);
+    font-weight: 700;
+    font-size: 1.5em;
+  }
+
 }
