--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,17 @@ main{
     }
   }
 }
+
+.attribution{
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  color: var(--Grey-700);
+
+  & a{
+    text-decoration: none;
+    color: var(--Green);
+    font-weight: lighter;
+    opacity: 50%;
+  }
+}
